--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,8 +13,8 @@ main:
   - name: Talks
     url: talks/
     weight: 12
-  - name: Achievements
-    url: achievements/
+  - name: Experience
+    url: experience/
     weight: 13
   - name: Projects
     url: projects/
